Fixed some layout issues + styling

--- a/stylsheets/about.css
+++ b/stylsheets/about.css
@@ -1,6 +1,6 @@
 main{
   width: 80%;
-  margin-left: 175px;
+  margin:auto;
   }
 
 h1{
@@ -13,10 +13,9 @@ section{
   text-align: center;
 }
 article{
-  display: inline-block;
   width: 800px;
   border: 3px solid #C5CAE9;
-  margin: 20px;
+  margin: 20px auto;
   text-align:center;
   border-radius: 150px 150px 25px 25px;
 }
