--- a/stylsheets/portfolio.css
+++ b/stylsheets/portfolio.css
@@ -1,6 +1,6 @@
 main{
   width: 80%;
-  margin-left: 175px;
+  margin:auto;
 }
 
 h1{
@@ -9,13 +9,19 @@ h1{
   text-align: center;
 }
 article{
-  display: inline-block;
+  display: inline-flex;
   width: 400px;
   height: 300px;
   border: 3px solid #C5CAE9;
   margin: 10px;
   text-align:center;
-  border-radius: 40%;
+  border-radius: 15px 50px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+article:hover{
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 article img{
